fix spacing and centering issues

--- a/react-front-end/src/styles/base/_typography.scss
+++ b/react-front-end/src/styles/base/_typography.scss
@@ -4,7 +4,7 @@
 
 body {
   font-family: 'Poppins', sans-serif;
-  text-align: center;
+  // text-align: center;
 }
 
 h3 {
