--- a/react-front-end/src/styles/layout/_containers.scss
+++ b/react-front-end/src/styles/layout/_containers.scss
@@ -15,6 +15,7 @@
   &-aurora {
     flex-direction: row;
     margin-right: 15px;
+    text-align: center;
   }
 }
 
@@ -22,7 +23,7 @@
   display: flex;
   flex-direction: column;
   margin-left: 15px;
-  // margin-right: 15px;
+  text-align: center;
 }
 
 .spacer {
